--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-feather": "^2.0.3",
     "react-helmet": "^5.2.1",
     "react-scroll-to-element": "^0.2.0",
     "react-scrollspy": "^3.4.0",
-    "react-waypoint": "^9.0.2"
+    "react-waypoint": "^9.0.2",
+    "reactstrap": "^8.4.1"
   },
   "keywords": [
     "gatsby"
